--- a/modules.html
+++ b/modules.html
@@ -52,7 +52,13 @@
                     <h1 class="mt-4">Modules</h1>
                     <p>A DIN rail is a metal rail of a standard type widely used for mounting circuit breakers and industrial control equipment inside equipment racks. These products are typically made from cold rolled carbon steel sheet with a zinc-plated or chromated bright surface finish. Although metallic, they are meant only for mechanical support and are not used as a busbar to conduct electric current, though they may provide a chassis grounding connection.</p>
                     <h2>Insteon</h2>
+                    <!-- Draggable DIV -->
+                    <div id="mydiv">
+                    <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+                    <div id="mydivheader">Click here to move</div>
                     <img src="modules/insteon/switch.png" alt="Insteon On/Off Switch">
+                    </div>
+                    
                 </div>
             </div>
         </div>
