--- a/modules.html
+++ b/modules.html
@@ -55,8 +55,8 @@
                     <!-- Draggable DIV -->
                     <div id="mydiv">
                     <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-                    <div id="mydivheader">Click here to move</div>
-                    <img src="modules/insteon/switch.png" alt="Insteon On/Off Switch">
+                    <div id="mydivheader">
+                    <img src="modules/insteon/switch.png" alt="Insteon On/Off Switch"></div>
                     </div>
                     
                 </div>
