--- a/modules.html
+++ b/modules.html
@@ -54,9 +54,7 @@
                     <h2>Insteon</h2>
                     <!-- Draggable DIV -->
                     <div id="mydiv">
-                    <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-                    <div id="mydivheader">
-                    <img src="modules/insteon/switch.png" alt="Insteon On/Off Switch"></div>
+                    <img src="modules/insteon/switch.png" alt="Insteon On/Off Switch">
                     </div>
                     
                 </div>
